@@ -1,0 +1,6 @@
+package cuke4duke;
+
+public interface TableConverter {
+  
+  public String convert(String value);
+}
